tools/5 - vault/vault_unseal/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: "vault-ingress"
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`vault.home.lab`)"
      services:
        - name: "vault"
          port: 8200
